--- a/footer.css
+++ b/footer.css
@@ -1,24 +1,18 @@
-footer{
-    
-    
-  
-    
-    height: 130px;
-    box-shadow: 0px 1px 10px #c2c0c0;
+.footer {
+  height: 130px;
+  min-height: 130px;
+  flex-shrink: 0;
+  box-shadow: 0px -1px 10px #c2c0c0;
+  padding: 0 4%;
+  background-color: #0A222C;
 
-    padding: 0 4%;
-    background-color: #0A222C;
-    
-    
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    
-    bottom: 0;
-   
-   
-
-   
+  position: relative;
+  bottom: 0;
 }
-
 
 
 @media( max-width: 800px){
@@ -26,7 +20,7 @@ footer{
       
         
         height: 80px;
-      
+        min-height: 80px;
        
     }
 
@@ -38,6 +32,7 @@ footer{
       
         
         height: 40px;
+        min-height: 40px;
       
        
     }
