--- a/header.css
+++ b/header.css
@@ -1,37 +1,37 @@
-.burger-menu{
-    display: none;
-}
-
-.headimg {
-    content:url(./img/Fotogram_Logo.svg);
-    
-    width: 24%;
-    
-
- }
 
 
 
-header{
-    display: flex;
-    justify-content: space-between;
-    
-    height: 130px;
-    box-shadow: 0px 1px 10px #c2c0c0;
 
-    padding: 0 4%;
-    background-color: #0A222C;
-   
-    
-
-   
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 130px;
+  min-height: 130px;
+  flex-shrink: 0;
+  box-shadow: 0px 1px 10px #c2c0c0;
+  padding: 0 4%;
+  background-color: #0A222C;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  margin-bottom: 30px;
+  position: relative;
+  gap: 8px;
+  
 }
 
 
-header img{
-    padding-top: 20px;
-    padding-bottom: 20px;
+.evo-card p {
+  color: white;
+  margin-top: 6px;
 }
+
+#modal-evo p {
+  color: white;
+  text-align: center;
+}
+
 
 
 
@@ -40,9 +40,12 @@ header img{
       
         
         height: 80px;
+        min-height: 80px;
       
        
     }
+
+    
 
 }
 
@@ -52,8 +55,10 @@ header img{
       
         
         height: 40px;
+        min-height: 40px;
       
        
     }
-
+   
 }
+
